backend-banking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: banking-service
  name: banking-service
  namespace: banka-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banking-service
  strategy: {}
  template:
    metadata:
      labels:
        app: banking-service
    spec:
      containers:
      - image: ghcr.io/raf-si-2025/banka-4-backend/banking-service:latest
        name: banking-service
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: banking-service
  labels:
    app: banking-service
  namespace: banka-4
spec:
  selector:
    app: banking-service
  ports:
    - name: api
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: grpc
      protocol: TCP
      port: 50052
      targetPort: 50052
