backend-email.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: email-service
  name: email-service
  namespace: banka-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-service
  strategy: {}
  template:
    metadata:
      labels:
        app: email-service
    spec:
      containers:
      - image: ghcr.io/raf-si-2025/banka-4-backend/email-service:latest
        name: email-service
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: email-service
  labels:
    app: email-service
  namespace: banka-4
spec:
  selector:
    app: email-service
  ports:
    - name: api
      protocol: TCP
      port: 8084
      targetPort: 8084
    - name: grpc
      protocol: TCP
      port: 50054
      targetPort: 50054
