backend-interbank.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: interbank-service
  name: interbank-service
  namespace: banka-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: interbank-service
  strategy: {}
  template:
    metadata:
      labels:
        app: interbank-service
    spec:
      containers:
      - image: ghcr.io/raf-si-2025/banka-4-backend/interbank-service:latest
        name: interbank-service
        resources: {}
        volumeMounts:
        - name: interbank-peers-config
          mountPath: /app/config
      volumes:
      - name: interbank-peers-config
        configMap:
          name: interbank-peers-config
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: interbank-service
  labels:
    app: interbank-service
  namespace: banka-4
spec:
  selector:
    app: interbank-service
  ports:
    - name: api
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: grpc
      protocol: TCP
      port: 50054
      targetPort: 50054
