backend-trading.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: trading-service
  name: trading-service
  namespace: banka-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading-service
  strategy: {}
  template:
    metadata:
      labels:
        app: trading-service
    spec:
      containers:
      - image: ghcr.io/raf-si-2025/banka-4-backend/trading-service:latest
        name: trading-service
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: trading-service
  labels:
    app: trading-service
  namespace: banka-4
spec:
  selector:
    app: trading-service
  ports:
    - name: api
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: grpc
      protocol: TCP
      port: 50053
      targetPort: 50053
