backend-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  strategy: {}
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - image: ghcr.io/raf-si-2025/banka-4-backend/user-service:latest
        name: user-service
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: user-service
  namespace: banka-4
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
