maildev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maildev
  namespace: banka-4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maildev
  template:
    metadata:
      labels:
        app: maildev
    spec:
      containers:
      - image: maildev/maildev:latest
        name: maildev
        ports:
        - name: maildev-smtp
          containerPort: 1025
        - name: maildev-http
          containerPort: 1080
        resources:
          limits:
            memory: 256Mi
            cpu: "200m"
          requests:
            memory: 64Mi
            cpu: "50m"
---
apiVersion: v1
kind: Service
metadata:
  name: maildev
  namespace: banka-4
spec:
  selector:
    app: maildev
  ports:
  - name: maildev-smtp
    protocol: TCP
    port: 1025
    targetPort: 1025
  - name: maildev-http
    protocol: TCP
    port: 1080
    targetPort: 1080
