http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: banka-4
spec:
  parentRefs:
  - name: banka-gw
    namespace: envoy-gateway-system
  hostnames:
  - banka-4.radenkovic.rs
  rules:
  - matches:
    - path: {type: PathPrefix, value: /nginx}
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: nginx
      port: 80
  - matches:
    - path: {type: PathPrefix, value: /apache}
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: apache
      port: 80
